# levthe.dev

./: .gitmodules  CNAME  README.md  hugo.toml  index.html
blog/: .gitignore  Cargo.toml  deploy.sh
blog/blog/: my-first-post.md  programming-language-interpreter-from-scratch-part-1.md  programming-language-interpreter-from-scratch-part-2.md  she-got-big.md
blog/src/: main.rs
blog/src/controllers/: articles.rs  content.rs  mod.rs  rss.rs
blog/static/: style.css
blog/static/images/: puppy.webm
blog/templates/: articles.html  blog.html  footer.html  head.html  not_found.html  rss.xml  test.html
code/interpreter/src/: main.rs
content/blog/: my-first-post.md
content/blog/my-first-post/: index.md
content/posts/language-interpreter-from-scratch-part-1/: index.md
content/posts/my-first-post/: index.md
content/posts/programming-language-interpreter-from-scratch-part-1/: index.md
content/posts/programming-language-interpreter-from-scratch-part-2/: index.md
content/posts/yet-another-language-tutorial/: index.md
public/: 404.html  index.html  index.xml  main.css.map  sitemap.xml
public/ananke/css/: main.css.map
public/blog/: index.html  index.xml
public/blog/my-first-post/: index.html
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/language-interpreter-from-scratch-part-1/: index.html
public/posts/my-first-post/: index.html
public/posts/programming-language-interpreter-from-scratch-part-1/: index.html
public/tags/: index.html  index.xml
themes/hello-friend/: theme.toml
(+13 files in other folders)
